fix the font of the staff list onr home page on iPhone

--- a/src/public/css/style.scss
+++ b/src/public/css/style.scss
@@ -106,7 +106,7 @@ html {
       margin: 1%;
       width: 85%;
       padding-left: 2%;
-      font-size: 15px;
+      font-size: 24px;
       background: white;
       box-shadow: -3px 3px 2px 0 #9e9e9e;
     }
